# ai-chat

./: README.md  ball.py  chat.py  npyChat.py  pyproject.toml
ai-chat-v1/: chat.py
ai-generated-code-test/: ball.py
app/: apikeyform.py  application.py  base.py  client.py  constants.py  controls.py  conversation.py  functions.py  labels.py  main.py  mainform.py
tests/: tests_main.py
